syntax = "proto3";

package tunnel;

option go_package = "./;tunnel";

message PingRequest {
    uint64 ts = 2;
}

message PingResponse {
    uint64 ts = 2;
    uint64 echoedTs = 3;
}

message HttpHeader {
    string name = 1;
    repeated string values = 2;
}

message HttpRequest {
    string id = 1;
    string target = 2;
    string protocol = 3;
    string method = 4;
    string URI = 5;
    repeated HttpHeader headers = 6;
    bytes body = 7;
}

message CancelRequest {
    string id = 1;
    string target = 2;
}

// This is the initial response sent to the controller from the agent.
// The body is sent back in a series of HttpChunkedResponse messages,
// with a zero length meaning EOF.
message HttpResponse {
    string id = 1;
    string target = 2;
    int32 status = 3;
    repeated HttpHeader headers = 4;
    int64 contentLength = 6;
}

message HttpChunkedResponse {
    string id = 1;
    string target = 2;
    bytes body = 3;
}

message CommandRequest {
    string id = 1;
    string target = 2;
    string name = 3;
    repeated string arguments = 4;
    repeated string environment = 5;
}

// A simplified message, used for command-tool <-> controller communication.
// This does not have the "id" or "target" field, as these are set by
// the controller based on authentication used.
message CmdToolCommandRequest {
    string name = 3;
    repeated string arguments = 4;
    repeated string environment = 5;
}

enum ChannelDirection {
    STDIN = 0;
    STDOUT = 1;
    STDERR = 2;
}

message CommandData {
    string id = 1;
    string target = 2;
    bytes body = 3;
    ChannelDirection channel = 4;
    bool Closed = 5;
}

// A simplified message, used for command-tool <-> controller communication.
// This does not have the "id" or "target" field, as these are set by
// the controller based on authentication used.
message CmdToolCommandData {
    bytes body = 3;
    ChannelDirection channel = 4;
    bool Closed = 5;
}

message CommandTermination {
    string id = 1;
    string target = 2;
    int32 exitCode = 3;
    string message = 4;
}

// A simplified message, used for command-tool <-> controller communication.
// This does not have the "id" or "target" field, as these are set by
// the controller based on authentication used.
message CmdToolCommandTermination {
    int32 exitCode = 3;
    string message = 4;
}

message AgentHello {
    repeated string protocols = 1;
    repeated string kubernetesNamespaces = 2;
    repeated string commandNames = 3;
}

// Messages sent from server to agent
message SAEventWrapper {
    oneof event {
        PingResponse pingResponse = 1;
        HttpRequest httpRequest = 2;
        CancelRequest cancelRequest = 3;
        CommandRequest commandRequest = 4;
        CommandData commandData = 5;
    }
}

// Messages sent from agent to server
message ASEventWrapper {
    oneof event {
        PingRequest pingRequest = 1;
        HttpResponse httpResponse = 2;
        HttpChunkedResponse httpChunkedResponse = 3;
        AgentHello agentHello = 4;
        CommandData commandData = 5;
        CommandTermination commandTermination = 6;
    }
}

// Messages sent from command-tool to controller
message CmdToolToControllerEventWrapper {
    oneof event {
        CmdToolCommandRequest commandRequest = 1;
        CmdToolCommandData commandData = 2;
    }
}

// Messages sent from the controller to the command-tool
message ControllerToCmdToolEventWrapper {
    oneof event {
        CmdToolCommandTermination commandTermination = 1;
        CmdToolCommandData commandData = 2;
    }
}

//
// Service (runs on the controller)
//

service TunnelService {
    rpc AgentEventTunnel(stream ASEventWrapper) returns (stream SAEventWrapper) {}
}
